--- a/daw/proUno/proCinco.html
+++ b/daw/proUno/proCinco.html
@@ -45,31 +45,31 @@
   <section>
     <a name="5.0"></a>
     <article>
-      <h3>Tema 5.- Gestión de ficheros</h3>
+      <h3 class="subTitulo">Introducción</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="5.1"></a>
     <article>
-      <h3>Concepto y tipos de ficheros</h3>
+      <h3 class="subTitulo">Concepto y tipos de ficheros</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="5.2"></a>
     <article>
-      <h3>Diseño y modulación de las operaciones sobre ficheros</h3>
+      <h3 class="subTitulo">Diseño y modulación de las operaciones sobre ficheros</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="5.3"></a>
     <article>
-      <h3>Operaciones sobre ficheros secuenciales</h3>
+      <h3 class="subTitulo">Operaciones sobre ficheros secuenciales</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="5.4"></a>
     <article>
-      <h3>Control de excepciones</h3>
+      <h3 class="subTitulo">Control de excepciones</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
