--- a/daw/proUno/proCuatro.html
+++ b/daw/proUno/proCuatro.html
@@ -51,67 +51,67 @@
   <section>
     <a name="4.0"></a>
     <article>
-      <h3>Tema 4.- Programación modular</h3>
+      <h3 class="subTitulo">Introducción</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.1"></a>
     <article>
-      <h3>Concepto</h3>
+      <h3 class="subTitulo">Concepto</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.2"></a>
     <article>
-      <h3>Ventajas e inconvenientes</h3>
+      <h3 class="subTitulo">Ventajas e inconvenientes</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.3"></a>
     <article>
-      <h3>Análisis descendente (top down)</h3>
+      <h3 class="subTitulo">Análisis descendente (top down)</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.4"></a>
     <article>
-      <h3>Modulación de programas. Subprogramas</h3>
+      <h3 class="subTitulo">Modulación de programas. Subprogramas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.5"></a>
     <article>
-      <h3>Llamadas a funciones (métodos). Tipos y funcionamiento</h3>
+      <h3 class="subTitulo">Llamadas a funciones (métodos). Tipos y funcionamiento</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.6"></a>
     <article>
-      <h3>Ámbito de las llamadas a funciones</h3>
+      <h3 class="subTitulo">Ámbito de las llamadas a funciones</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.7"></a>
     <article>
-      <h3>Prueba, depuración y comentarios de programas</h3>
+      <h3 class="subTitulo">Prueba, depuración y comentarios de programas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.8"></a>
     <article>
-      <h3>Concepto de librerías</h3>
+      <h3 class="subTitulo">Concepto de librerías</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.9"></a>
     <article>
-      <h3>Uso de librerías</h3>
+      <h3 class="subTitulo">Uso de librerías</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.10"></a>
     <article>
-      <h3>Introducción al concepto de recursividad</h3>
+      <h3 class="subTitulo">Introducción al concepto de recursividad</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
