--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -53,79 +53,79 @@
   <section>
     <a name="3.0"></a>
     <article>
-      <h3>Tema 3.- Programación estructurada</h3>
+      <h3 class="subTitulo">Introducción</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.1"></a>
     <article>
-      <h3>Fundamentos de programación</h3>
+      <h3 class="subTitulo">Fundamentos de programación</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.2"></a>
     <article>
-      <h3>Introducción a la algoritmia y herramientas de diseño</h3>
+      <h3 class="subTitulo">Introducción a la algoritmia y herramientas de diseño</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.3"></a>
     <article>
-      <h3>Ciclo de vida de un proyecto software</h3>
+      <h3 class="subTitulo">Ciclo de vida de un proyecto software</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.4"></a>
     <article>
-      <h3>Prueba de programas</h3>
+      <h3 class="subTitulo">Prueba de programas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.5"></a>
     <article>
-      <h3>Tipos de datos: simples y compuestos</h3>
+      <h3 class="subTitulo">Tipos de datos: simples y compuestos</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.6"></a>
     <article>
-      <h3>Estructuras de selección (Condicionales)</h3>
+      <h3 class="subTitulo">Estructuras de selección (Condicionales)</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.7"></a>
     <article>
-      <h3>Estructuras de repetición</h3>
+      <h3 class="subTitulo">Estructuras de repetición</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.8"></a>
     <article>
-      <h3>Estructuras de salto</h3>
+      <h3 class="subTitulo">Estructuras de salto</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.9"></a>
     <article>
-      <h3>Tratamiento de cadenas</h3>
+      <h3 class="subTitulo">Tratamiento de cadenas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.10"></a>
     <article>
-      <h3>Depuración de errores</h3>
+      <h3 class="subTitulo">Depuración de errores</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.11"></a>
     <article>
-      <h3>Documentación de programas</h3>
+      <h3 class="subTitulo">Documentación de programas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.12"></a>
     <article>
-      <h3>Entornos de desarrollo de programas</h3>
+      <h3 class="subTitulo">Entornos de desarrollo de programas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
