--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -47,7 +47,7 @@
   <!--*************************************************************-->
   <section>
     <article>
-      <h3>Introducción</h3>
+      <h3 class="subTitulo">Introducción</h3>
       <p>
         Un programa es un conjunto de instrucciones dadas al ordenador
         en un lenguaje que solo es entendible por él para
@@ -84,7 +84,7 @@
     <!--*************************************************************-->
     <a name="1.1"></a>
     <article>
-      <h3>1.1.- Representaciones gráficas</h3>
+      <h3 class="subTitulo">Representaciones gráficas</h3>
       <p>Para representar un algoritmo, podemos utilizar dos
         herramientas gráficas: los diagramas de flujo y el pseudocódigo.</p>
       <p>Un diagrama de flujo es una representación gráfica de un
@@ -107,7 +107,7 @@
     <!--*************************************************************-->
     <a name="1.2"></a>
     <article>
-      <h3>1.2.- Características de los diagramas de flujo</h3>
+      <h3 class="subTitulo">Características de los diagramas de flujo</h3>
       <ul>
         <li>Deben escribirse de arriba abajo o de izquierda a derecha.</li>
         <li>Debemos evitar el cruce de lineas, el unos de conectores debe producirse cuadno no exista otra opción.</li>
@@ -121,7 +121,7 @@
     <!--*************************************************************-->
     <a name="1.3"></a>
     <article>
-      <h3>1.3.- Características del pseudocódigo</h3>
+      <h3 class="subTitulo">Características del pseudocódigo</h3>
       <ul>
         <li>Comienza con la palabra algoritmo seguido de su nombre.</li>
         <li>Secuencia de intrucciones de este algoritmo.</li>
@@ -134,7 +134,7 @@
     <!--*************************************************************-->
     <a name="1.4"></a>
     <article>
-      <h3>1.4.- Comunicación de un sistema informático</h3>
+      <h3 class="subTitulo">Comunicación de un sistema informático</h3>
       <p>En el proceso de programación se comunica a un usuario con una máquina, se necesita:</p>
       <ul>
         <li>Usuario y máquina.</li>
@@ -148,7 +148,7 @@
     <!--*************************************************************-->
     <a name="1.5"></a>
     <article>
-      <h3>1.5- Características del lenguaje de alto nivel</h3>
+      <h3 class="subTitulo">Características del lenguaje de alto nivel</h3>
       <ul>
         <li>Es totalmente independiente de la máquina y muy portable.</li>
         <li>Muy utilizado en el mercado laboral.</li>
@@ -160,7 +160,7 @@
     <!--*************************************************************-->
     <a name="1.6"></a>
     <article>
-      <h3>1.6.- Características del lenguaje de bajo nivel</h3>
+      <h3 class="subTitulo">Características del lenguaje de bajo nivel</h3>
       <ul>
         <li>Está relacionado con las características del hardware.</li>
         <li>Fácilmente traducible al lenguaje máquina.</li>
@@ -172,7 +172,7 @@
     <!--*************************************************************-->
     <a name="1.7"></a>
     <article>
-      <h3>1.7.- Lenguajes compilados e interpretados</h3>
+      <h3 class="subTitulo">Lenguajes compilados e interpretados</h3>
       <p>Los compilados son como su nombre indica aquellos que utilizan un compilador para traducirlos al lenguaje máquina.</p>
       <p>En los interpretados se efectúa directamente la traducción y ejecución simultáneamente para cada una de las sentencias. Un intérprete verifica cada línea cuando se escribe. La ejecución es más lenta debido a esta traducción simultánea.</p>
       <p>Características de C#</p>
