--- a/daw/sistemas/temaCuatro.html
+++ b/daw/sistemas/temaCuatro.html
@@ -52,72 +52,72 @@
   <!--*************************************************************-->
   <section>
     <article>
-      <h3 class="tituloPrincipal">Tema 4.- Administración de dominios</h3>
+      <h3 class="subTitulo">Introducción</h3>
     </article>
   <!--*************************************************************-->
   <a name="4.1"></a>
     <article>
-      <h3>4.1.- Estructura cliente-servidor</h3>
+      <h3 class="subTitulo">Estructura cliente-servidor</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="4.2"></a>
     <article>
-      <h3>4.2.- Protocolo LDAP</h3>
+      <h3 class="subTitulo">Protocolo LDAP</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="4.3"></a>
     <article>
-      <h3>4.3.- Concepto de dominio. Subdominios. Requisitos necesarios para montar un dominio</h3>
+      <h3 class="subTitulo">Concepto de dominio. Subdominios. Requisitos necesarios para montar un dominio</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="4.4"></a>
     <article>
-      <h3>4.4.- Conceptos clave de Active Directory</h3>
+      <h3 class="subTitulo">Conceptos clave de Active Directory</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="4.5"></a>
     <article>
-      <h3>4.5.- Administración de cuentas. Cuentas predeterminadas</h3>
+      <h3 class="subTitulo">Administración de cuentas. Cuentas predeterminadas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="4.6"></a>
     <article>
-      <h3>4.6.- Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</h3>
+      <h3 class="subTitulo">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="4.7"></a>
     <article>
-      <h3>4.7.- Perfiles móviles y obligatorios</h3>
+      <h3 class="subTitulo">Perfiles móviles y obligatorios</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="4.8"></a>
     <article>
-      <h3>4.8.- Carpetas personales</h3>
+      <h3 class="subTitulo">Carpetas personales</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="4.9"></a>
     <article>
-      <h3>4.9.- Plantillas de usuario. Variables de entorno</h3>
+      <h3 class="subTitulo">Plantillas de usuario. Variables de entorno</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="4.10"></a>
     <article>
-      <h3>4.10.- Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</h3>
+      <h3 class="subTitulo">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="4.11"></a>
     <article>
-      <h3>4.11.- Instalación de Windows Server y Ubuntu Server</h3>
+      <h3 class="subTitulo">Instalación de Windows Server y Ubuntu Server</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
