--- a/daw/sistemas/temaTres.html
+++ b/daw/sistemas/temaTres.html
@@ -51,73 +51,69 @@
   </section>
   <!--*************************************************************-->
   <section>
-    <article>
-      <h3 class="tituloPrincipal">Tema 3.- Administración de la información</h3>
-    </article>
-  <!--*************************************************************-->
   <a name="3.1"></a>
     <article>
-      <h3>3.1.- Sistema de archivos</h3>
+      <h3 class="subTitulo">Sistema de archivos</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.2"></a>
     <article>
-      <h3>3.2.- Tipos de sitemas de archivos</h3>
+      <h3 class="subTitulo">Tipos de sitemas de archivos</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.3"></a>
     <article>
-      <h3>3.3.- Gestión de sitemas de archivos mediante comandos y entornos gráficos</h3>
+      <h3 class="subTitulo">Gestión de sitemas de archivos mediante comandos y entornos gráficos</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.4"></a>
     <article>
-      <h3>3.4.- Gestión de enlaces</h3>
+      <h3 class="subTitulo">Gestión de enlaces</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.5"></a>
     <article>
-      <h3>3.5.- Estructura de directorios de sistemas operativos libres y propietarios</h3>
+      <h3 class="subTitulo">Estructura de directorios de sistemas operativos libres y propietarios</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.6"></a>
     <article>
-      <h3>3.6.- Búsqueda de información del sistema mediante comandos y herramientas gráficas</h3>
+      <h3 class="subTitulo">Búsqueda de información del sistema mediante comandos y herramientas gráficas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.7"></a>
     <article>
-      <h3>3.7.- Identificación del software instalado mediante comandos y herramientas gráficas</h3>
+      <h3 class="subTitulo">Identificación del software instalado mediante comandos y herramientas gráficas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.8"></a>
     <article>
-      <h3>3.8.- Gestión de la información del sistema. Rendimiento. Estadística</h3>
+      <h3 class="subTitulo">Gestión de la información del sistema. Rendimiento. Estadística</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.9"></a>
     <article>
-      <h3>3.9.- Montaje y desmontaje de dispositivos en sistemas operativos</h3>
+      <h3 class="subTitulo">Montaje y desmontaje de dispositivos en sistemas operativos</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.10"></a>
     <article>
-      <h3>3.10.- Automatización</h3>
+      <h3 class="subTitulo">Automatización</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.11"></a>
     <article>
-      <h3>3.11.- Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</h3>
+      <h3 class="subTitulo">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
